<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2022 NetEase, Inc. All rights reserved. -->
<!-- Use of this source code is governed by a MIT license that can be -->
<!-- found in the LICENSE file. -->

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/video_call_bg"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/video_call_bg"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="15dp">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:text="@string/cancel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="17sp"
                android:text="@string/title_setting"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/tv_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:layout_alignParentEnd="true"
                android:text="@string/done" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_time"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_marginEnd="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/tv_tip"
                android:inputType="number"
                android:textSize="16sp"
                android:maxLength="5"
                android:text="30"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:background="@drawable/et_search_bg" />

            <TextView
                android:id="@+id/tv_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/edt_time"
                android:layout_alignBottom="@id/edt_time"
                android:layout_marginStart="20dp"
                android:gravity="center_vertical"
                android:text="设置RTC呼叫超时时间（秒）："
                android:textColor="@color/colorWhite" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_enable_audio_call"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="30dp"
                android:layout_toEndOf="@+id/enable_audio_call"
                android:checked="true"
                android:gravity="center"
                android:maxLength="5"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/enable_audio_call"
                android:layout_alignTop="@id/sw_enable_audio_call"
                android:layout_alignBottom="@id/sw_enable_audio_call"
                android:layout_width="wrap_content"
                android:layout_marginStart="20dp"
                android:text="呼叫类型为音频："
                android:gravity="center_vertical"
                android:textColor="@color/colorWhite"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
